// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-accordion__expandable-content-body"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Renders without children 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-accordion__expandable-content-body"
  />
</DocumentFragment>
`;
